--- a/style.css
+++ b/style.css
@@ -46,9 +46,9 @@ li{
 }
 
 
-li c, li d, li e {
-    color: rgb(165, 165, 165);
-    padding: 1px 30px; /* separacion de categorias*/
+li a {
+    color: rgb(255, 255, 255);
+    padding: 1px 0px; /* separacion de categorias*/
     text-decoration: none;
     display: block;
     cursor:pointer;
